# vnpy-hyperliquid

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
docs/: assessment.md
scripts/: patch_gateway.py  patch_okx_parity.py
tests/: test_gateway.py
vnpy_hyperliquid/: __init__.py  hyperliquid_gateway.py
